# markmagic

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  release.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  release.yml
docai/: __init__.py  auto.py  chunk.txt  chunking.py  document.py  docx.py  eml.py  excel.py  models.py  pdf.py  settings.py  splitter.py
docs/: index.md  modules.md
markmagic/: __init__.py  auto.py  docx.py  eml.py  excel.py  main.py  pdf.py  pptx.py  settings.py
tests/: conftest.py  test_any.py  test_auto.py  test_settings.py
tests/cassettes/test_any/: test_convert_any_pdf_vlm.yaml
tests/data/: msft_fs_2024.xlsx  msft_pr_24q4.docx
tests/data/docx/: msft_pr.docx  msft_pr.md
tests/data/eml/: Unstructured Emails.eml  example.md  html_w_att.eml  html_w_att.md  html_wo_att.md  plain.eml  plain.md
tests/data/excel/: msft_fs.md  msft_fs.xlsx
tests/data/pdf/: form10k.md  msft_ar.md
tests/data/pptx/: sample.md  sample.pptx
tests/helper/: create_email.py
tests/unit/: test_auto.py  test_docx.py  test_excel.py  test_pdf.py
typings/markdownify/: __init__.pyi
typings/puremagic/: __init__.pyi
typings/pypdfium2/: __init__.pyi
