[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "markmagic"
version = "0.1.0"
description = "Convert documents to markdown"
authors = [{ name = "Adrian Yeung", email = "yeungadrianjy@gmail.com" }]
readme = "README.md"
keywords = ["python"]
requires-python = ">=3.11,<4.0"
dependencies = [
    "markdownify>=1.1.0",
    "openai>=1.66.3",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pypdf>=5.4.0",
    "pypdfium2>=4.30.1",
    "python-calamine>=0.3.1",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.7.0",
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-recording>=0.13.2",
    "tox-uv>=1.25.0",
]

[tool.ruff]
line-length = 108
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F",      # Pyflakes
  "E",      # pycodestyle (Error)
  "I",      # isort
  "D",      # pydocstyle
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
  "B",      # flake8-bugbear
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "C4",     # flake8-comprehensions
]
ignore = [
  "D401",   # non-imperative-mood
  "D105",   # undocumented-magic-method
  "D107",   # undocumented-public-init
]
pydocstyle = { convention = "numpy" }
pycodestyle = { max-doc-length = 108 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.coverage.run]
source = ['markmagic']
branch = true
relative_files = true
context = '${CONTEXT}'

[tool.coverage.report]
precision = 2

[tool.coverage.paths]
source = [
    'markmagic/',
]

[tool.pyright]
strict = ["markmagic"]
enableExperimentalFeatures = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    '/README.md',
    '/markmagic',
    '/typings',
    '/tests',
]
